<resources>
    <string name="app_name">Deutsch Lernen Zusammen</string>
    <string name="app_name_short">Deutsch Lernen Zusammen</string>
    <string name="about_us">About Us</string>
    <string name="developer_name">Shivam Naik</string>
    <string name="developer_bio">
        Software Developer\n
        Beginner at German\n
        So, Lets learn together\n
        <b><i>Oh warte! Lass uns Zusammen lernen</i></b>
    </string>
    <string name="git_url">Git URL: https://github.com/shivamsnaik/WillKommenEsIstDeutsch</string>
    <string name="practiceTxt">Practice Hören</string>
    <string name="beginnersTxt">Beginners Section</string>
    <string name="numbersTxt">Numbers/Zahlen</string>
    <string name="alphabetsTxt">Alphabets</string>
    <string name="greetingsTxt">Greetings/Gruß</string>
    <string name="weekNamesTxt">Week Names/Wochen Tage</string>
    <string name="MonthNamesTxt">Month Names</string>
    <string name="whQuestionsTxt">Wh-questions/Wh-Fragen</string>
    <string name="dativVerbenTxt">Dativ Verben</string>
    <string name="grammerA1Txt">Grammar Section (A1)</string>
    <string name="grammerA2Txt">Grammar Section (A2)</string>
    <string name="articleChartsTxt">Articles Charts</string>
    <string name="nounsTxt">Nouns (with Article)</string>
    <string name="conjugationTxt">Conjugation Table</string>
    <string name="articleCasesTxt">Article Cases</string>
    <string name="pronounTxt">Akkusativ and Dativ Pronouns</string>
    <string name="articleCasesNoteTxt">In case of confusion or doubts on usage of Dativ Plural case, refer the <font fgcolor="#EE3B3B"> point 2</font> of <font fgcolor="#EE3B3B">General Rules</font> tab in <font fgcolor="#EE3B3B">A1</font> section</string>
    <string name="possessivePronounsTxt">Possessive Pronouns</string>
    <string name="toggleDarkModeTxt">Dim/Light the Candles</string>
    <string name="trenbarrUntrennbarVerbenTxt">Trennbar/Untrennbar Verbs</string>
    <string name="rulesTxt">General Rules</string>
    <string name="weekNamesNote"><font fgcolor="red">Note:\n\n1. Wochentag: Weekdays\n2. Wochenende: Weekends\n3. All the words take \"DER\"  as article</font></string>
    <string name="monthNamesNote"><font fgcolor="red">Note:\n\n1. All the words take \"DER\"  as article</font></string>
    <string-array name="greetings">
        <item>Hallo</item>
        <item>Hello</item>

        <item>Guten Morgen</item>
        <item>Good Morning</item>

        <item>Guten Tag</item>
        <item>Good Day</item>

        <item>Guten Abend</item>
        <item>Good Evening</item>

        <item>Gute Nacht</item>
        <item>Good Night</item>

        <item>Wie geht\'s?/\nWie geht es dir\?</item>
        <item>How are you?\n(informal)</item>

        <item>Wie geht es Ihnen\?</item>
        <item>How are you?\n(formal)</item>

        <item>Übermorgen</item>
        <item>Day after tomorrow</item>

        <item>Heute</item>
        <item>Today</item>

        <item>Gestern</item>
        <item>Yesterday</item>

        <item>Vorgestern</item>
        <item>Day before yesterday</item>

        <item>Danke</item>
        <item>Thank-you</item>

        <item>Vielen Dank</item>
        <item>Thank-you so much</item>

        <item>Gern geschehen</item>
        <item>Welcome\n(Reply to thanks)</item>

        <item>Sehr Gut</item>
        <item>Very Good</item>

        <item>Willkommen</item>
        <item>Welcome\n(Greeting)</item>

        <item>Herzlich willkommen</item>
        <item>Heartly Welcome</item>

        <item>Gesundheit</item>
        <item>God bless you</item>

        <item>Enschuldigen Sie/Entschuldigung</item>
        <item>Excuse me/\nsorry</item>

        <item>Freut mich/\nfreut mich Sie \nkennenzulernen</item>
        <item>Glad to meet</item>

        <item>Bis Später</item>
        <item>See you later</item>

        <item>Bis Bald</item>
        <item>See you soon</item>

        <item>Bis Gleich</item>
        <item>See you right back</item>

        <item>Tut mir leid</item>
        <item>I\'m sorry</item>

        <item>Auf Wiedersehen(F)/\nTschüss(INF)</item>
        <item>Good bye</item>

        <item>Bis gleich</item>
        <item>All the best</item>

        <item>Noch einmal/\nWiederholen Sie bitte.</item>
        <item>Please repeat</item>

        <item>Gute Besserung</item>
        <item>Get well soon</item>

        <item>Viel Erfolg</item>
        <item>Wish you lot of success</item>

        <item>Mein herzliches Beileid</item>
        <item>Heart filled condolences</item>

        <item>Gratulationen</item>
        <item>Congratulations</item>

        <item>Gute Reise/\nSchöne Reise.</item>
        <item>Happy Journey</item>

        <item></item>
    </string-array>
    <string name="englishTxt">English</string>
    <string name="germanTxt">Deutsch\n<font size="12"><i>(Click on the word for Voice O/P)</i></font></string>
    <string name="akkusativTxt">Akkusativ\n<font size="12"><i>(Click on the word for Voice O/P)</i></font></string>
    <string name="dativTxt">Dativ\n<font size="12"><i>(Click on the word for Voice O/P)</i></font></string>
    <string-array name="weekNames">
        <item>Montag</item>
        <item>Monday</item>

        <item>Dienstag</item>
        <item>Tuesday</item>

        <item>Mittwoch</item>
        <item>Wednesday</item>

        <item>Donnerstag</item>
        <item>Thursday</item>

        <item>Freitag</item>
        <item>Friday</item>

        <item>Samstag</item>
        <item>Saturday</item>

        <item>Sonntag</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="monthNames">
        <item>Januar</item>
        <item>January</item>

        <item>Februar</item>
        <item>February</item>

        <item>März</item>
        <item>March</item>

        <item>April</item>
        <item>April</item>

        <item>Mai</item>
        <item>May</item>

        <item>Juni</item>
        <item>June</item>

        <item>Juli</item>
        <item>July</item>

        <item>August</item>
        <item>August</item>

        <item>September</item>
        <item>September</item>

        <item>November</item>
        <item>November</item>

        <item>Dezember</item>
        <item>December</item>
    </string-array>
    <string-array name="whQuestions">
        <item>Was?</item>
        <item>What?</item>

        <item>Wo?</item>
        <item>Where?</item>

        <item>Wer?</item>
        <item>Who?</item>

        <item>Warum?</item>
        <item>Why?</item>

        <item>Wann?</item>
        <item>When?</item>

        <item>Welche?</item>
        <item>Which?</item>

        <item>Wie?</item>
        <item>How?</item>

        <item>Wieso?</item>
        <item>How come?</item>

        <item>Wie lange?</item>
        <item>How long?</item>

        <item>Mit wem?</item>
        <item>Whom?</item>

        <item>Wessen?</item>
        <item>Whose?</item>

        <item>Wie viel?</item>
        <item>How much?</item>

        <item>Woher?</item>
        <item>Where from?</item>

        <item>Wohin?</item>
        <item>Where to?</item>

    </string-array>
    <string-array name="dativeVerbs">
        <item>ERZÄHLEN</item>
        <item>TO TELL</item>

        <item>GEFALLEN</item>
        <item>TO LIKE</item>

        <item>GEHÖREN</item>
        <item>TO BELONG</item>

        <item>HÄNGEN</item>
        <item>TO HANG SOMETHING</item>

        <item>HELFEN</item>
        <item>TO HELP</item>

        <item>PASSEN</item>
        <item>TO BE SUITABLE</item>

        <item>SCHMECKEN</item>
        <item>TO TASTE</item>

        <item>STEHEN</item>
        <item>TO STAND</item>

        <item>WÜNSCHEN</item>
        <item>TO WISH</item>
    </string-array>
    <string name="ruleOneTxt">1. <font fgcolor="#EE3B3B">Zum</font> is used as an exception while talking about food at different time. \nEg. <font fgcolor="#EE3B3B">Zum</font> Früstuck, <font fgcolor="#EE3B3B">Zum</font> Mittagessen. </string>
    <string name="ruleTwoTxt">2. Dativ Plural case examples:\n\n
        <i>Ich gebe <font fgcolor="#EE3B3B">den</font> Kinder<font fgcolor="#EE3B3B">n</font> die Schokoladen.\n\n</i>
        <font fgcolor="#EE3B3B">Den</font> is used as the article and <font fgcolor="#EE3B3B">n</font> is added as suffix to the noun which takes dativ case in the <font fgcolor="#EE3B3B">plural form</font>.
    </string>
    <string name="ruleThreeTxt">
        3. <font fgcolor="#EE3B3B">Zu</font> Hause oder <font fgcolor="#EE3B3B">Nach</font> Hause ???\n -> Use <font fgcolor="#EE3B3B">Zu</font> Hause when in possession.\n\u0009\u0009\u0009\u0009\u0009Ich bin <font fgcolor="#EE3B3B">zu</font> Hause.\n
        -> <font fgcolor="#EE3B3B">Nach</font> Hause when action is involved.\n\u0009\u0009\u0009\u0009\u0009Ich gehe <font fgcolor="#EE3B3B">nach</font> Hause.
    </string>
    <string name="ruleFourTxt">4. Ich gehe <font fgcolor="#EE3B3B">nach</font> oder <font fgcolor="#EE3B3B">zu</font> Deutschland??\n<font fgcolor="#EE3B3B">Nach</font> is used while going to a destination that occupied large space.\nEg. Countries</string>
    <string name="ruleFiveTxt">5. A trennbar verb can end with <font fgcolor="#EE3B3B">T or EN</font> in Partizip Zwei</string>
    <string name="ruleSixTxt">6. A general trick to remember the <font fgcolor="#EE3B3B">Definite Article Cases</font> table i.e., Pick first letter from each word and make a small word for each case.
        Eg.\n NOMINATIVE -> <font fgcolor="#EE3B3B">R E S E</font>\n\u0009\u0009\u0009AKKUSATIV -> <font fgcolor="#EE3B3B">N E S E</font>\n
        \u0009\u0009\u0009DATIV -> <font fgcolor="#EE3B3B">M R M+N</font>
        \n\u0009\u0009\u0009GENITIV -> <font fgcolor="#EE3B3B">S R S R</font>
    </string>
    <string name="ruleSevenTxt">7. <font fgcolor="#EE3B3B">Viel</font> => NOT COUNTABLE ITEM
        \n\u0009\u0009\u0009\u0009\u0009Eg. Wie <font fgcolor="#EE3B3B">viel</font> kostet das?
        \n<font fgcolor="#EE3B3B">Viele</font> => COUNTABLE ITEM
        \n\u0009\u0009\u0009\u0009\u0009Wie <font fgcolor="#EE3B3B">viele</font> kinder sind da?
    </string>
    <string name="ruleEightTxt">
        8. <font fgcolor="#EE3B3B">In</font> => When action leads anyone inside or outside something.
        \n\u0009\u0009\u0009\u0009\u0009Eg. Ich gehe <font fgcolor="#EE3B3B">in</font> die Kirche.
        \n<font fgcolor="#EE3B3B">Zu</font> => When action does not specify ending up inside or ouside some place.
        \n\u0009\u0009\u0009\u0009\u0009Eg. Ich gehe <font fgcolor="#EE3B3B">zur</font> Kirche.
    </string>
    <string name="adjectivEndingTxt">
        Adjektiv Endings Table
    </string>
</resources>