<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor"
    tools:context=".AboutUsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/about_us"
        android:textSize="25sp"
        android:background="?attr/backgroundcolor"
        android:textColor="?attr/textcolor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center"
        android:text="@string/developer_name"
        android:background="@drawable/border"
        android:textColor="?attr/textcolor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center"
        android:text="@string/git_url"
        android:background="@drawable/border"
        android:textColor="?attr/textcolor"
        android:autoLink="web"
        android:linksClickable="true"/>
</LinearLayout>