<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.deutschlernen.deutschlernenzuzammen.fragments.GrammarA1Fragment"
    tools:ignore="MissingPrefix"
    android:background="?attr/HeaderColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/grammarA1Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?attr/BackgroundColor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/articleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_two"
                android:text="@string/articleChartsTxt"
                android:textSize="20dp"
                android:height="120dp"
                android:elevation="10dp"
                android:translationZ="1dp"
                android:stateListAnimator="@null"
                android:textColor="?attr/ButtonTextColor" />

            <Button
                android:id="@+id/nounsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_three"
                android:text="@string/nounsTxt"
                android:textSize="20dp"
                android:height="120dp"
                android:elevation="10dp"
                android:translationZ="2dp"
                android:stateListAnimator="@null"
                android:textColor="?attr/ButtonTextColor" />

            <Button
                android:id="@+id/conjugationBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_four"
                android:text="@string/conjugationTxt"
                android:textSize="20dp"
                android:height="120dp"
                android:elevation="10dp"
                android:translationZ="3dp"
                android:stateListAnimator="@null"
                android:textColor="?attr/ButtonTextColor" />

            <Button
                android:id="@+id/articleCasesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_five"
                android:text="@string/articleCasesTxt"
                android:textSize="20dp"
                android:height="120dp"
                android:elevation="10dp"
                android:translationZ="3dp"
                android:stateListAnimator="@null"
                android:textColor="?attr/ButtonTextColor" />

            <Button
                android:id="@+id/pronounsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_six"
                android:text="@string/pronounTxt"
                android:textSize="20dp"
                android:height="120dp"
                android:elevation="10dp"
                android:translationZ="3dp"
                android:stateListAnimator="@null"
                android:textColor="?attr/ButtonTextColor" />

            <Button
                android:id="@+id/possessivePronounsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_seven"
                android:text="@string/possessivePronounsTxt"
                android:textSize="20dp"
                android:height="120dp"
                android:elevation="10dp"
                android:translationZ="4dp"
                android:stateListAnimator="@null"
                android:textColor="?attr/ButtonTextColor" />

            <Button
                android:id="@+id/dativVerbenBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_eight"
                android:text="@string/dativVerbenTxt"
                android:textSize="20dp"
                android:height="120dp"
                android:elevation="10dp"
                android:translationZ="5dp"
                android:stateListAnimator="@null"
                android:textColor="?attr/ButtonTextColor" />

            <Button
                android:id="@+id/trenbarrUntrennbarVerbenBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_nine"
                android:text="@string/trenbarrUntrennbarVerbenTxt"
                android:textSize="20dp"
                android:height="120dp"
                android:elevation="10dp"
                android:translationZ="6dp"
                android:stateListAnimator="@null"
                android:textColor="?attr/ButtonTextColor" />

            <Button
                android:id="@+id/rulesA1Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_ten"
                android:text="@string/rulesTxt"
                android:textSize="20dp"
                android:height="120dp"
                android:elevation="10dp"
                android:translationZ="7dp"
                android:stateListAnimator="@null"
                android:textColor="?attr/ButtonTextColor" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>