<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deutschlernen.deutschlernenzuzammen.fragments.levelone.RulesFragment"
    android:background="?attr/BackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/rulesTxt"
            android:textColor="?attr/HeaderTextColor"
            android:background="?attr/HeaderColor"
            android:textSize="25sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:background="@drawable/grid_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/ruleOneTxt"
            android:textSize="18sp"
            android:textColor="?attr/TableTextColor"
            >

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dimWhite"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_vertical"
            android:background="@drawable/grid_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/ruleTwoTxt"
            android:textColor="?attr/TableTextColor"
            android:textSize="18sp"
            android:justificationMode="inter_word"
            >
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dimWhite"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_vertical"
            android:background="@drawable/grid_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/ruleThreeTxt"
            android:textColor="?attr/TableTextColor"
            android:textSize="18sp"
            android:justificationMode="inter_word">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dimWhite"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@drawable/grid_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/ruleFourTxt"
            android:textColor="?attr/TableTextColor"
            android:textSize="18sp"
            android:justificationMode="inter_word">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dimWhite"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_vertical"
            android:background="@drawable/grid_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/ruleFiveTxt"
            android:textColor="?attr/TableTextColor"
            android:textSize="18sp"
            android:justificationMode="inter_word">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dimWhite"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_vertical"
            android:background="@drawable/grid_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/ruleSixTxt"
            android:textColor="?attr/TableTextColor"
            android:textSize="18sp"
            android:justificationMode="inter_word">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dimWhite"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="center_vertical"
            android:background="@drawable/grid_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/ruleSevenTxt"
            android:textColor="?attr/TableTextColor"
            android:textSize="18sp"
            android:justificationMode="inter_word">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dimWhite"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_vertical"
            android:background="@drawable/grid_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/ruleEightTxt"
            android:textColor="?attr/TableTextColor"
            android:textSize="18sp"
            android:justificationMode="inter_word">
        </TextView>

    </LinearLayout>
</ScrollView>